# hf-mem

./: .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  SKILL.md  main.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: pre-commit.yaml  tests.yaml  trufflehog.yaml
skill/: SKILL.md
skills/hf-mem/: SKILL.md
src/: auth.rs  errors.rs  fetch.rs  main.rs  schemas.rs  sharded.rs  token.rs
src/hf_mem/: __init__.py  _fetch.py  _local.py  _print.py  _types.py  _version.py  cli.py  config.py  gguf.py  inference.py  main.py  metadata.py  print.py  run.py  types.py
src/hf_mem/estimators/: __init__.py
src/hf_mem/gguf/: __init__.py  fetch.py  kv_cache.py  metadata.py  print.py  types.py
src/hf_mem/hardware/: __init__.py  catalog.json  catalog.py  custom.py  detect.py  fitness.py  print.py  resolve.py  types.py
src/hf_mem/hub/: hf_client.py  safetensors_metadata.py  sentence_transformers.py
src/hf_mem/safetensors/: __init__.py  fetch.py  kv_cache.py  metadata.py  print.py  types.py  warmup_peak.py
src/hf_mem/utils/: constants.py
