[package]
name = "hf-mem"
version = "0.0.1-dev1"
edition = "2024"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "CLI to estimate the required memory to run inference with Hugging Face models"
repository = "https://github.com/alvarobartt/hf-mem"
documentation = "https://docs.rs/hf-mem"
authors = ["Alvaro Bartolome <alvarobartt@gmail.com>"]

[dependencies]
anyhow = "1.0.97"
byteorder = "1.5.0"
clap = { version = "4.5.31", features = ["derive"] }
dirs = "6.0.0"
reqwest = "0.12.12"
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["macros"] }
