[package]
name = "hf-mem"
version = "0.0.3"
edition = "2024"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "CLI to estimate inference memory requirements from the Hugging Face Hub"
repository = "https://github.com/alvarobartt/hf-mem"
authors = ["Alvaro Bartolome <alvarobartt@gmail.com>"]

[dependencies]
anyhow = "1.0.97"
byteorder = "1.5.0"
bytes = "1.10.1"
clap = { version = "4.5.31", features = ["derive"] }
reqwest = "0.12.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread"] }
