[project]
name = "hf-mem"
version = "0.0.1"
description = "A CLI to estimate inference memory requirements for Hugging Face models, written in Python"
readme = "README.md"
authors = [
    { name = "Alvaro Bartolome", email = "36760800+alvarobartt@users.noreply.github.com" }
]
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
hf-mem = "hf_mem.__init__:main"
